// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHead renders the component as sticky 1`] = `
.emotion-2 th {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
}

.emotion-1:last-child td {
  border-bottom: none;
}

.emotion-1:hover td {
  background-color: #F7F9FA;
}

.emotion-0 {
  background-color: #F7F9FA;
  border-bottom: 1px solid #E7EBEE;
  color: #414D63;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  padding: 0.75rem 1rem;
  text-align: left;
  vertical-align: top;
}

<thead
  class="emotion-2"
  data-test-id="cf-ui-table-head"
>
  <tr
    class="emotion-1"
    data-test-id="cf-ui-table-row"
  >
    <th
      class="emotion-0"
      data-test-id="cf-ui-table-cell"
    >
      test
    </th>
  </tr>
</thead>
`;

exports[`TableHead renders the component as sticky and with an offset Top 1`] = `
.emotion-2 th {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
}

.emotion-1:last-child td {
  border-bottom: none;
}

.emotion-1:hover td {
  background-color: #F7F9FA;
}

.emotion-0 {
  background-color: #F7F9FA;
  border-bottom: 1px solid #E7EBEE;
  color: #414D63;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  padding: 0.75rem 1rem;
  text-align: left;
  vertical-align: top;
}

<thead
  class="emotion-2"
  data-test-id="cf-ui-table-head"
>
  <tr
    class="emotion-1"
    data-test-id="cf-ui-table-row"
  >
    <th
      class="emotion-0"
      data-test-id="cf-ui-table-cell"
      style="top: 20px;"
    >
      test
    </th>
  </tr>
</thead>
`;
